--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "livewire/livewire": "^2.11",
         "mcamara/laravel-localization": "^1.8",
         "nesbot/carbon": "^2.69",
-        "rappasoft/laravel-livewire-tables": "^2.15"
+        "rappasoft/laravel-livewire-tables": "^2.15",
+        "wire-elements/modal": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
